[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforge-deploy"
dynamic = ["version"]
description = "Lightweight automation tool designed to streamline the transition from development to distribution."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "toml",
    "jinja2",
    "packaging",
    "python-dotenv",
    "build",
    "twine"
]
keywords = [
  "python",
  "docker",
  "pypi",
  "cli",
  "devops",
  "automation",
  "workflow",
  "packaging",
]

authors = [
    { name = "Ertan Tunç Türk", email = "ertantuncturk61@gmail.com" },
]

maintainers = [
    { name = "Ertan Tunç Türk", email = "ertantuncturk61@gmail.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
]

[tool.setuptools.dynamic]
version = {file = ".pyforge-deploy-cache/version_cache"}

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "bandit",
    "pip-audit",
    "pre-commit",
    "coverage",
    "types-toml"
]

[project.urls]
Homepage = "https://github.com/ertanturk/pyforge-deploy"
Repository = "https://github.com/ertanturk/pyforge-deploy"
Documentation = "https://github.com/ertanturk/pyforge-deploy#readme"
Issues = "https://github.com/ertanturk/pyforge-deploy/issues"

[project.scripts]
pyforge-deploy = "pyforge_deploy.cli:main"
pyforge = "pyforge_deploy.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pyforge-deploy]
default_bump = "patch"
auto_confirm = true
verbose = true
docker_push = true
docker_platforms = "linux/amd64"
docker_python = "3.12-slim"
docker_user = "ertantuncturk"
docker_wheelhouse = true
docker_non_root = true
pypi_build_target = "wheel"
pypi_reuse_dist = true
pypi_skip_preflight = false
pypi_retries = 2
pypi_backoff = 1
plugin_timeout = 300

[tool.pyforge-deploy.plugins]
before_build = []
after_build = []
before_release = []
after_release = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
minversion = "7.0"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
